--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.5",
+    "vue-spinner": "^1.0.3",
     "vuetify": "^2.2.15",
     "vuex": "^3.1.2"
   },
