--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
     "vue-number-animation": "^1.0.5",
     "vue-router": "^3.1.5",
     "vue-spinner": "^1.0.3",
@@ -46,6 +45,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-webpack-bundle-analyzer": "~2.0.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
