--- a/nginx.conf
+++ b/nginx.conf
@@ -28,4 +28,13 @@ http {
       root   /usr/share/nginx/html;
     }
   }
+
+  # server {
+  #   listen 443 ssl;
+  #   server_name example.org;
+    
+  #   location / {
+  #       proxy_pass http://example.org; #for demo purposes
+  #   }
+  # }
 }
