--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,7 @@ http {
       root   /app;
       index  index.html;
       try_files $uri $uri/ /index.html;
+      # try_files $uri /index.html;
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
