add https certbot

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,18 +24,25 @@ http {
       try_files $uri $uri/ /index.html;
       # try_files $uri /index.html;
     }
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
   }
 
-  # server {
-  #   listen 443 ssl;
-  #   server_name example.org;
-    
-  #   location / {
-  #       proxy_pass http://example.org; #for demo purposes
-  #   }
-  # }
+  server {
+    listen 443 ssl;
+    server_name 2485.in;
+    ssl_certificate /etc/letsencrypt/live/2485.in/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/2485.in/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+ 
+    location / {
+        proxy_pass http://2485.in;
+    }
+  }
 }
