--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # volumes:
+    volumes:
+      - './data/certbot/conf:/etc/letsencrypt'
+      - './data/certbot/www:/var/www/certbot'
     #   - '.:/app'
     #   - '/app/node_modules'
     ports:
       - 80:80
       - 443:443
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - './data/certbot/conf:/etc/letsencrypt'
+      - './data/certbot/www:/var/www/certbot'
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
